--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
                 <p>Descubre lo que podrías ganar al participar en nuestro sorteo.</p>
                 <div class="prizes-grid">
                     <div class="prize-item">
-                        <img src="assets/celular1" alt="Celular marca Iphone, de paquete, color brillante.">
+                        <img src="assets/iphone14.png" alt="Celular marca Iphone, de paquete, color brillante.">
                         <h3>Iphone 14 </h3>
                         <p>¡Gana un iPhone 14 en nuestro sorteo!
 ¿Listo para llevarte la tecnología más avanzada a casa? ¡Participa en nuestro increíble sorteo y podrás ser el afortunado ganador de un flamante iPhone 14!
 Este espectacular smartphone viene cargado con las últimas innovaciones de Apple, ofreciéndote una experiencia inigualable:
- * Cámara de otro nivel: Captura fotos y videos impresionantes con su sistema de cámaras avanzado.
- * Rendimiento ultrarrápido: Disfruta de tus apps, juegos y contenido multimedia sin interrupciones.
- * Diseño elegante y resistente: Un dispositivo que no solo es potente, sino también un placer a la vista y al tacto.
- * Batería para todo el día: No te preocupes por quedarte sin carga en el momento menos esperado.</p>
+ * Cámara de otro nivel
+ * Rendimiento ultrarrápido
+ * Diseño elegante y resistente
+ * Batería para todo el día.</p>
                     </div>
                     <div class="prize-item">
                         <img src="https://via.placeholder.com/300x200?text=Imagen+Premio+2" alt="Imagen del Premio 2">
