--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="right-home-content">
             <h2>Bienvenido a "AYUDA QUE AYUDA"</h2>
             <p>Participa en nuestro sorteo solidario y apoya una gran causa mientras tienes la oportunidad de ganar increíbles premios.</p>
-            <img src="https://via.placeholder.com/600x400?text=Imagen+Principal+Sorteo" alt="Imagen de bienvenida al sorteo" class="home-main-image">
+            <img src="assets/sorteo1.png" alt="portada del sorteo">
             <p>Cada boleto que adquieres nos permite extender nuestra ayuda a más personas necesitadas. ¡Tu apoyo es fundamental!</p>
         </div>
 </section>
@@ -48,7 +48,7 @@
                 <p>Descubre lo que podrías ganar al participar en nuestro sorteo.</p>
                 <div class="prizes-grid">
                     <div class="prize-item">
-                        <img src="assets/iphone14.png" alt="Celular marca Iphone, de paquete, color brillante.">
+                        <img src="assets/iphone 14.png" alt="Celular marca Iphone, de paquete, color brillante.">
                         <h3>Iphone 14 </h3>
                         <p>¡Gana un iPhone 14 en nuestro sorteo!
 ¿Listo para llevarte la tecnología más avanzada a casa? ¡Participa en nuestro increíble sorteo y podrás ser el afortunado ganador de un flamante iPhone 14!
@@ -59,9 +59,10 @@ Este espectacular smartphone viene cargado con las últimas innovaciones de Appl
  * Batería para todo el día.</p>
                     </div>
                     <div class="prize-item">
-                        <img src="https://via.placeholder.com/300x200?text=Imagen+Premio+2" alt="Imagen del Premio 2">
-                        <h3>Título del Premio 2</h3>
-                        <p>Breve descripción del premio 2. Añade todos los detalles relevantes aquí.</p>
+                        <img src="assets/dinero.png" alt="Billetes de veinte USD">
+                        <h3>Gana Dinero</h3>
+                        <p>¡Sorteo de Dinero en Efectivo para 10 Ganadores!
+¡Prepara tu billetera porque Tendremos 10 afortunados ganadores que se llevarán dinero en efectivo. ¡Así es, 10 oportunidades de ganar!</p>
                     </div>
                     </div>
             </section>
