--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         <span id="progressPercentage" class="progress-percentage-horizontal">0%</span>
     </div>
     <button id="buyButton" class="buy-button-horizontal">Comprar Boletos Ahora</button>
-    <p class="call-to-action">¡No te quedes sin tu oportunidad de ganar y ayudar!</p>
+    <p class="call-to-action">Por tan solo $0,50 
+No te quedes sin tu oportunidad de ganar 🏆
+Tu boleto es la llave para reclamar tu premio 🎁</p>
 </div>
         <div class="right-home-content">
             <h2>Bienvenido a "AYUDA QUE AYUDA"</h2>
             <p>Participa en nuestro sorteo solidario y apoya una gran causa mientras tienes la oportunidad de ganar increíbles premios.</p>
-            <img src="assets/sorteo1.png" alt="portada del sorteo">
+            <img src="assets/sorteoticket.png" alt="portada del sorteo">
             <p>Cada boleto que adquieres nos permite extender nuestra ayuda a más personas necesitadas. ¡Tu apoyo es fundamental!</p>
         </div>
 </section>
