--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <span id="progressPercentage" class="progress-percentage-horizontal">0%</span>
     </div>
     <button id="buyButton" class="buy-button-horizontal">Comprar Boletos Ahora</button>
-    <p class="call-to-action">Por tan solo $0,50 
+    <p class="call-to-action">"Por tan solo $0,50" 
 No te quedes sin tu oportunidad de ganar 🏆
 Tu boleto es la llave para reclamar tu premio 🎁</p>
 </div>
