--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
         <div id="progressFill" class="progress-fill-horizontal" style="width: 0%;"></div>
         <span id="progressPercentage" class="progress-percentage-horizontal">0%</span>
     </div>
-    <button id="buyButton" class="buy-button-horizontal">Comprar Boletos Ahora</button>
-    <p class="call-to-action">"Por tan solo $0,50" 
-No te quedes sin tu oportunidad de ganar 🏆
-Tu boleto es la llave para reclamar tu premio 🎁</p>
+<button id="buyButton" class="buy-button-horizontal">Comprar Boletos Ahora</button>
+<ul class="call-to-action-list"> <li>Por tan solo $0,50</li>
+    <li>No te quedes sin tu oportunidad de ganar 🏆</li>
+    <li>Tu boleto es la llave para reclamar tu premio 🎁</li>
+</ul>
 </div>
         <div class="right-home-content">
             <h2>Bienvenido a "AYUDA QUE AYUDA"</h2>
