--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="right-home-content">
             <h2>Bienvenido a "AYUDA QUE AYUDA"</h2>
             <p>Participa en nuestro sorteo solidario y apoya una gran causa mientras tienes la oportunidad de ganar increíbles premios.</p>
-            <img src="assets/sorteoticket.png" alt="portada del sorteo">
+            <img src="assets/boleto1.png" alt="portada del sorteo">
             <p>Cada boleto que adquieres nos permite extender nuestra ayuda a más personas necesitadas. ¡Tu apoyo es fundamental!</p>
         </div>
 </section>
