--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </div>
         <div class="right-home-content">
             <h2>Bienvenido a "AYUDA QUE AYUDA"</h2>
-            <p>Participa en nuestro sorteo solidario y apoya una gran causa mientras tienes la oportunidad de ganar increíbles premios.</p>
+            <p>Participa en nuestro sorteo y no pierdas la oportunidad de ganar increíbles premios.</p>
             <img src="assets/boletito.jpeg" alt="portada del sorteo">
             <p>Cada boleto que adquieres nos permite extender nuestra ayuda a más personas necesitadas. ¡Tu apoyo es fundamental!</p>
         </div>
@@ -64,8 +64,7 @@ Este espectacular smartphone viene cargado con las últimas innovaciones de Appl
                     <div class="prize-item">
                         <img src="assets/dinero.png" alt="Billetes de veinte USD">
                         <h3>Gana Dinero</h3>
-                        <p>¡Sorteo de Dinero en Efectivo para 10 Ganadores!
-¡Prepara tu billetera porque Tendremos 10 afortunados ganadores que se llevarán dinero en efectivo. ¡Así es, 10 oportunidades de ganar!</p>
+                        <p>¡Prepara tu billetera porque Tendremos 10 afortunados ganadores que se llevarán dinero en efectivo. ¡Así es, 10 oportunidades de ganar!</p>
                     </div>
                     </div>
             </section>
