--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
             <h2>Bienvenido a "AYUDA QUE AYUDA"</h2>
             <p>Participa en nuestro sorteo y no pierdas la oportunidad de ganar increíbles premios.</p>
             <img src="assets/boletito.jpeg" alt="portada del sorteo">
-            <p>Cada boleto que adquieres nos permite extender nuestra ayuda a más personas necesitadas. ¡Tu apoyo es fundamental!</p>
+            <p>No te quedes con las ganas de saber que hubiera pasado.
+Este es el momento de actuar y asegurar tu premio 
+¡ evita ese arrepentimiento ! 
+Asique dime 
+¿ estaras  celebrando 🥳 o lamentando ☹️ no haber obtenido una oportunidad de ganar ? </p>
         </div>
 </section>
 
