--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@ Este espectacular smartphone viene cargado con las últimas innovaciones de Appl
                     </div>
             </section>
 
+<section class="proximo-premio">
+    <h2>PROXIMAMENTE</h2>
+    <div class="premio-item">
+        <h3> MOTO </h3>
+        <img src="assets/motito.jpeg" alt="moto">
+        <p>Prepárate para la aventura de tu vida. El próximo sorteo te llevará a toda velocidad.</p>
+    </div>
+    </section>
+
             <section id="como-participar" class="info-section">
                 <h2>Cómo Participar</h2>
                 <p>Participar en el sorteo "AYUDA QUE AYUDA" es muy sencillo:</p>
