--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Este espectacular smartphone viene cargado con las últimas innovaciones de Appl
     <h2>PROXIMAMENTE</h2>
     <div class="premio-item">
         <h3> MOTO </h3>
-        <img src="assets/motito.jpeg" alt="moto">
+        <img src="assets/daytona.jpeg" alt="moto">
         <p>Prepárate para la aventura de tu vida. El próximo sorteo te llevará a toda velocidad.</p>
     </div>
     </section>
