--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -32,6 +33,9 @@
         <div id="progressFill" class="progress-fill-horizontal" style="width: 0%;"></div>
         <span id="progressPercentage" class="progress-percentage-horizontal">0%</span>
     </div>
+<p style="text-align: center; margin: 15px 0; font-weight: bold; color: #0056b3;">
+    ¡Cuenta regresiva! Con el 80% completado, <strong>Revelaremos a los ganadores</strong>
+</p>
 <button id="buyButton" class="buy-button-horizontal">Comprar Boletos Ahora</button>
 <ul class="call-to-action-list"> <li>Por tan solo $0,50</li>
     <li>No te quedes sin tu oportunidad de ganar 🏆</li>
