--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="progressFill" class="progress-fill-horizontal" style="width: 0%;"></div>
         <span id="progressPercentage" class="progress-percentage-horizontal">0%</span>
     </div>
-<p style="text-align: center; margin: 15px 0; font-weight: bold; color: #0056b3;">
+<p style="text-align: center; margin: 15px 0; font-weight: bold; color: #FFFFFF;">
     ¡Cuenta regresiva! Con el 80% completado, <strong>Revelaremos a los ganadores</strong>
 </p>
 <button id="buyButton" class="buy-button-horizontal">Comprar Boletos Ahora</button>
