--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Este espectacular smartphone viene cargado con las últimas innovaciones de Appl
                 <p>Si tienes alguna pregunta o necesitas ayuda, no dudes en contactarnos:</p>
                 <ul>
                     <li>Correo Electrónico: micontenidor97z@gmail.com</li>
-                    <li>Teléfono: +593 978 997 299</li>
+                    <li>Teléfono: +593978997299</li>
                     <li>Redes Sociales: Encuéntranos en Tiktok como @ayudaqueayuda.</li>
                 </ul>
                 <form class="contact-form">
@@ -153,7 +153,7 @@ Este espectacular smartphone viene cargado con las últimas innovaciones de Appl
         // ----- CONTROLES MANUALES PARA LA BARRA DE PORCENTAJE -----
         // Puedes cambiar este valor (0-100) para actualizar la barra manualmente.
         // Por ejemplo, cámbialo a 25 para 25%, a 70 para 70%, etc.
-        let currentPercentage = 26; // Inicia en 0%
+        let currentPercentage = 27; // Inicia en 0%
 
         const progressFill = document.getElementById('progressFill');
         const progressPercentageText = document.getElementById('progressPercentage');
